--- a/HiaChat_WPF/App.xaml
+++ b/HiaChat_WPF/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="HiaChat_WPF.App"
+﻿<Application x:Class="HiaChat_Server.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:HiaChat_WPF"
+             xmlns:local="clr-namespace:HiaChat_Server"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
