--- a/HiaChat_WPF/MainWindow.xaml
+++ b/HiaChat_WPF/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="HiaChat_WPF.MainWindow"
+﻿<Window x:Class="HiaChat_Server.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:HiaChat_WPF"
+        xmlns:local="clr-namespace:HiaChat_Server"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
